[package]
name = "syng-rs"
version = "0.1.0"
edition = "2021"
authors = ["Andrea Guarracino <aguarracino@tgen.org>"]
description = "Rust bindings for the syng syncmer graph library"
license = "MIT"
repository = "https://github.com/AndreaGuarracino/syng-rs"
keywords = ["bioinformatics", "pangenome", "syncmer", "graph", "ffi"]
categories = ["science", "api-bindings"]
exclude = [
    "target/",
    "vendor/syng/TEST/",
    "vendor/syng/*.md",
    "!vendor/syng/README.md",
    "!vendor/syng/LICENSE",
]

[lib]
name = "syng_rs"
path = "src/lib.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
